[metadata]
name = 'soundengine'
version = '0.0.1'
description = ''
author = 'Josh Miklos'
author_email = 'josh.miklos@gmail.com'
license = 'MIT'
url = 'https://github.com/_/soundengine'

[requires]
python_version = ['2.7', '3.5', '3.6', 'pypy', 'pypy3']

[build-system]
requires = ['setuptools', 'wheel']

[tool.hatch.commands]
prerelease = 'hatch build'
